add Ausfuehrung in README.md